What's New for OpenJPEG

* : fixed
- : removed
! : changed
+ : added

January 7, 2011
! [szukw000] changed report code in Makefile.am

January 3, 2011
- [antonin] removed badly written tests from CTest in 'codec/CMakeLists.txt'

_______ R697 : OPENJPEG 1.4 RELEASED ______________________________

January 2, 2011
* [antonin] bug fixes to enable cmake compilation on WIN32 platform
			- fixed getopt bug in jpwl/CMakeLists.txt
			- added png, zlib and lcms win32 libraries to libs directory
			- updated libs/libtiff library
			- moved j2k_dump_{image,cp} to j2k_dump.c to remain consistent with API interface
			- changed mj2 cmake compilation method: as long as mj2 binaries do not strictly use the API interface, libopenjpeg source files are directly included in mj2 executables compilation.
! [antonin] small update to xcode project

December 14, 2010
! [szukw000] adapted Makefile.am/Makefile.nix to build
             choice: shared xor static

December 11, 2010
* [antonin] fixed flags when building jp3d with MinGW

December 10, 2010
! [szukw000] changed build choice in configure.ac/Makefile.am/Makefile.nix:
             shared xor static

December 9, 2010
! [antonin] removed LCMS dependency in jp3d/libjp3dvm/CMakeLists.txt
! [antonin] updated xcode project
! [antonin] renamed jp3d/libjp3dvm/openjpeg.h => jp3d/libjp3dvm/openjpeg3d.h
- [antonin] removed "codec/compat/" directory
* [szukw000] updated Makefile.in
! [szukw000] removed LCMS dependencies from Makefile.am/Makefile.nix

December 8, 2010 
  (thanks to Winfried for his help)
* [antonin] changed remaining "WIN32" to "_WIN32"
! [antonin] libopenjpeg has no more dependency on LCMS lib. Everything concerning color (icc profile, conversion to rgb, etc) has been put outside libopenjpeg and is used in j2k_to_image.c and mj2_to_frames.c.
- [antonin] removed 'opj_convert{.c,.h}'
+ [antonin] added a directory 'common/' that contains 'getopt{.c,.h}' (previously in 'codec/compat').